# glacial-strat-patterns

./: .gitignore  LICENSE  LICENSE-patterns.md  README.md  pyproject.toml
docs/: toward-an-open-standard.md
examples/: example_column.py  example_hatch.py  example_structures.py
glacial_patterns/: __init__.py  build.py  catalog.py  hatch.py  mpl.py  patterns.py  structures.py
metadata/: facies.csv  facies.json
tests/: test_catalog.py  test_exports.py  test_structures.py
